objects/TriggerExecution__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account Trigger check</description>
        <label>Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attachment Trigger check</description>
        <label>Attachment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Agreement_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Benefit Agreement Trigger check</description>
        <label>Benefit Agreement Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Component_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Component Trigger check</description>
        <label>Case Component Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Ownership_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Ownership Trigger check</description>
        <label>Case Ownership Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Trigger check</description>
        <label>Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Relationship_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Competitor Relationship Trigger check</description>
        <label>Competitor Relationship Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Relationship Trigger check</description>
        <label>Contact Relationship Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Trigger check</description>
        <label>Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Document_Link_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Content Document Link Trigger check</description>
        <label>Content Document Link Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Version_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Content Version Trigger checkbox</description>
        <label>Content Version Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Status_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integration Status Trigger check</description>
        <label>Integration Status Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity Trigger check</description>
        <label>Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secure_Information_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Secure Information Trigger checkbox</description>
        <label>Secure Information Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Task Trigger check</description>
        <label>Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User Trigger check</description>
        <label>User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Execution</label>
</CustomObject>